# JijModeling2Seminar

./: .gitignore  README.md  pyproject.toml
notebooks/: 00_optimization_basics.ipynb  00_optimization_basics.py  01_supplier_selection.ipynb  01_supplier_selection.py  02_warehouse_layout.ipynb  02_warehouse_layout.py  03_visualization_and_debugging.ipynb  03_visualization_and_debugging.py
prompt/: jijmodeling2_guide.md
